                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 19-07-2005 fixed: iTunes streaming.
 - 19-07-2005 added: Ftp SITE commands to XBMC's builtin functions.
 - 19-07-2005 fixed: Settings weren't saved on app exit.
 - 19-07-2005 fixed: UTF16 RSS feeds should at least display (no idea if they'll look as they're supposed to!)
 - 19-07-2005 fixed: Program bookmarks with ' in them screwed up.
 - 19-07-2005 updated: swedish strings.xml (thanks limit) and italian strings.xml (thanks kotix)
 - 19-07-2005 fixed: External dvdplayer couldn't be based off Q:
 - 19-07-2005 fixed: Couldn't alter volume while paused.
 - 19-07-2005 changed: Minor cleanup of system info.
 - 19-07-2005 fixed: Karaoke with paplayer + reduced mic delay.
 - 19-07-2005 changed: removed some separator bars from settings screens
 - 19-07-2006 fixed: Incorrect focused category in settings screens on reentry.
 - 18-07-2005 updated: German language file
 - 18-07-2005 changed: reorganized the settings screens (moved some things and added separators)
 - 18-07-2005 changed: Auto visualisation timeout changed to a screensaver mode (Use Visualisation if playing music).
 - 18-07-2005 added: routines for knowing wich field is currently being rendered, can be used to sync interlaced video
 - 18-07-2005 fixed: if xbmc ran out of memmory when starting a video, it often lockup with a black screen
 - 18-07-2005 fixed: deinterlacing in mplayer wasn't possible to enable without enabling postprocessing
 - 18-07-2005 added: Calculate Folder size to My Files.
 - 18-07-2005 fixed: Settings are saved on exit from the settings screens and on exit from the app.
 - 18-07-2005 added: Separator bar to settings screens.